test/qnumericError1.slq
def foo[n:â„•](){ /// error
	x:=vector(n,0:ğ”¹);
	x[0]:=H(x[0]);
	return x;
}
